--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ line-height: 13px;
 
 .projects img {
 margin-left:40px;
+
 }
 
 
@@ -202,7 +203,8 @@ margin-right: 200px;
 display: flex;
 justify-content: space-between;
 align-items: center;
-margin-top: 100px;
+margin-top: 55px;
+
 
 
 width: 350px;
@@ -276,13 +278,38 @@ margin-top: 80px;
 
 /* фотокарточки чтото там */
 .photo {
-background-color: #EEEFF1;
-height: 300px;
-margin-top: 80px;
+height: 480px;
+margin-top: 120px;
+margin-left: 45px;
+
 
 }
 
+.page img {
+width: 240px;
+height: 240px;
+margin-left: -4px;
 
+}
+
+.page2 img {
+width: 240px;
+height: 240px;
+margin-left: -4px;
+
+}
+
+.microsoft {
+display: flex;
+justify-content: space-between;
+margin-top: 40px;
+}
+
+.microsoft img {
+width: 10%;
+margin-left: auto;
+margin-right: auto;
+}
 
 /* дно */
 .flex {
@@ -294,7 +321,7 @@ height: 75px;
 margin: 0 auto;
 
 background-color: #34547A;
-margin-top: 80px;
+margin-top: 200px;
 
 }
 
