--- a/style.css
+++ b/style.css
@@ -372,8 +372,7 @@ margin-left: 50px;
 }
 
 
-@media all and (min-width: 0px) and (max-width: 1080px) {
-
+@media all and (min-width: 0px) and (max-width: 480px)
 body {
 overflow-x: hidden;
 }
