--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ min-height: 100vh;
 
 }
 
-/* Начало головы */
+/* Начало гол=овы */
 .container {
 max-width: 1920px;
 margin: 0 auto;
@@ -372,7 +372,7 @@ margin-left: 50px;
 }
 
 
-@media all and (min-width: 0px) and (max-width: 480px)
+@media all and (max-width: 480px){
 body {
 overflow-x: hidden;
 }
