--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ min-height: 100vh;
 
 }
 
-/* Начало гол=овы */
+/* Начало головы */
 .container {
 max-width: 1920px;
 margin: 0 auto;
@@ -107,7 +107,7 @@ margin-top: 50px;
     
 }
     
-.text_b h2 {
+.text_b h1 {
 color:#757575;
 margin-top: -50px;
 line-height: 100px;
@@ -372,33 +372,42 @@ margin-left: 50px;
 }
 
 
-@media all and (max-width: 650px){
-body {
-}
-.logo p {
-margin-left: 20px;
-margin-top: 25px;
+@media all and (min-width: 0px) and (max-width: 480px) {
 
-font-size: 27px;
-line-height: 30px;
+body {
+overflow-x: hidden;
+
+}
+
+.logo p {
+margin-left: 15px;
+margin-top: 15px;
+
+font-size: 18px;
 
 }
 
 .nav {
 margin-right: 90px;
-height: 130px;
+height: 100px;
 
+}
+
+.nav li {
+font-size: 20px;
+margin-bottom: -5px;
+margin-top: 10px;
 
 }
 
 .nav ul {
 
 width: 100px;
-height: 100px;
-transform: translate(-650px);
 
+margin-left: -250px;
 display: grid;
-grid-template-columns: repeat(2, 2fr);
+grid-template-columns: repeat(1, 4fr);
+
 
 
 
@@ -406,41 +415,46 @@ grid-template-columns: repeat(2, 2fr);
 
 
 .main {
-width: 480px;
-height: 600px;
+width: 280px;
+height: 420px;
 
 }
 
 .text_a h1 {
-font-size: 35px;
+font-size: 25px;
 margin-left: -70px;
+width: 200px;
+line-height: 40px;
 }
 
-.text_b h2 {
-font-size: 35px;
+.text_b h1 {
+font-size: 25px;
 margin-left: -70px;
+width: 250px;
+line-height: 70px;
+margin-bottom: -90px;
 }
 
 .section_container img {
-width: 30%;
-margin-bottom: 300px;
-margin-left: 300px;
+width: 35%;
+margin-bottom: -90px;
+margin-left: 150px;
 }
 
 .author h2 {
-margin-right: 600px;
+margin-right: 200px;
 margin-top: 40px;
 }
 
 .author p {
-margin-right: 650px;
+margin-right: 210px;
 margin-top: 20px;
-width: 400px;
+width: 250px;
 margin-bottom: -20px;
 }
 
 .works {
-width: 460px;
+width: 280px;
 margin-right: 615px;
 
 height: 250px;
@@ -448,54 +462,60 @@ height: 250px;
 
 .projects {
 display: grid;
-grid-template-columns: repeat(3, 2fr);
+grid-template-columns: repeat(4, 2fr);
 margin: 0 auto;
 
 font-size: 19px;
+line-height: 20px;
+margin-left: -20px;
 }
 
 .projects img {
-width: 30%;
+width: 40%;
 }
 
 .skills h2 {
 white-space: nowrap;
-margin-left: 140px;
+margin-left: 50px;
 margin-top: -25px;
 
 }
 
 .subskills {
-margin-left: -300px;
+margin-left: -220px;
 margin-top: -20px;
 }
 
 .subskills p {
-width: 480px;
+width: 280px;
+font-size: 16px;
 }
 
+
 .subskills h3 {
-margin-bottom: -50px;
+margin-bottom: -60px;
+font-size: 16px;
 }
 
 .skills img {
-margin-right: 300px;
-margin-top: 250px;
-
-transform: translate(-250px);
-
-width: 20%;
-height: 20%;
+margin-left: -80px;
+margin-top: -30px;
+width: 50px;
+height: 100%;
 }
 
+.page img {
+width: 140px;
+height: 100%;
+}
 .photo {
-width: 480px;
+width: 280px;
 height: 1000px;
 
 grid-template-columns: repeat(2, 5fr);
-margin-left: -5px;
+margin-left: 4.5px;
 
-margin-top: 60px;
+margin-top: 90px;
 margin-bottom: 60px;
 }
 
