--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ flex-direction: column;
 justify-content: space-between;
 min-height: 100vh;
 
+overflow-x: hidden;
+
 }
 
 /* Начало головы */
@@ -375,21 +377,31 @@ margin-left: 50px;
 @media all and (min-width: 0px) and (max-width: 480px) {
 
 body {
+width: 100vmin;
+
 overflow-x: hidden;
 
+}
+
+html {
+overflow-x: hidden;
+}
+
+.container {
+width: 100vmin;
 }
 
 .logo p {
 margin-left: 15px;
 margin-top: 15px;
 
-font-size: 18px;
+font-size: 23px;
 
 }
 
 .nav {
-margin-right: 90px;
-height: 100px;
+margin-left: 440px;
+height: 40px;
 
 }
 
@@ -404,63 +416,61 @@ margin-top: 10px;
 
 width: 100px;
 
-margin-left: -250px;
+margin-left: -400px;
 display: grid;
-grid-template-columns: repeat(1, 4fr);
-
-
-
+grid-template-columns: repeat(2, 2fr);
 
 }
 
 
 .main {
-width: 280px;
+width: 100vmin;
 height: 420px;
 
 }
 
 .text_a h1 {
-font-size: 25px;
-margin-left: -70px;
-width: 200px;
+font-size: 27px;
+margin-left: -80px;
+
+width: 400px;
 line-height: 40px;
 }
 
 .text_b h1 {
-font-size: 25px;
-margin-left: -70px;
-width: 250px;
+font-size: 27px;
+margin-left: -80px;
+width: 400px;
 line-height: 70px;
-margin-bottom: -90px;
+margin-bottom: 20px;
 }
 
 .section_container img {
-width: 35%;
-margin-bottom: -90px;
+width: 50%;
+margin-bottom: -70px;
 margin-left: 150px;
 }
 
 .author h2 {
-margin-right: 200px;
 margin-top: 40px;
+
 }
 
 .author p {
-margin-right: 210px;
 margin-top: 20px;
-width: 250px;
+width: 370px;
 margin-bottom: -20px;
+
 }
 
 .works {
-width: 280px;
-margin-right: 615px;
+width: 100vmin;
+height: 300px;
 
-height: 250px;
 }
 
 .projects {
+width: 100vmin;
 display: grid;
 grid-template-columns: repeat(4, 2fr);
 margin: 0 auto;
@@ -476,93 +486,114 @@ width: 40%;
 
 .skills h2 {
 white-space: nowrap;
-margin-left: 50px;
+margin-left: 80px;
 margin-top: -25px;
 
 }
 
 .subskills {
-margin-left: -220px;
+width: 100vmin;
+margin-left: -260px;
 margin-top: -20px;
+
 }
 
 .subskills p {
-width: 280px;
-font-size: 16px;
+width: 300px;
+font-size: 18px;
+
 }
 
 
 .subskills h3 {
 margin-bottom: -60px;
-font-size: 16px;
+font-size: 14px;
+
 }
 
 .skills img {
 margin-left: -80px;
-margin-top: -30px;
-width: 50px;
+margin-top: 210px;
+width: 150px;
 height: 100%;
+
 }
 
 .page img {
-width: 140px;
+width: 50vmin;
 height: 100%;
+
 }
+
 .photo {
-width: 280px;
+width: 100vmin;
 height: 1000px;
 
 grid-template-columns: repeat(2, 5fr);
 margin-left: 4.5px;
 
 margin-top: 90px;
-margin-bottom: 60px;
+margin-bottom: -140px;
+
 }
 
 .contacts {
-width: 480px;
+width: 100vmin;
 margin-bottom: 180px;
+
 }
 
 .contacts h2 {
-margin-left: 100px;
+margin-left: 60px;
+
 }
 
 .contacts button {
-margin-left: 135px;
+margin-left: 90px;
+
 }
 
 .microsoft {
+margin-top: 20px;
+
 height: 200px;
-width: 480px;
+
+display: grid;
+grid-template-columns: repeat(2, 2fr);
 
 }
 
 .microsoft img {
-width: 110px;
-height: 60%;
-margin-left: 0px;
+width: 50%;
+height: 100%;
+
 
 transform: translateY(450px);
 
 }
 
 
+
 .footer {
-width: 480px;
+width: 100vmin;
 margin-top: -40px;
 }
+
 .flex a {
-margin-left: 300px;
-margin-right: -50px;
+margin-left: 0px;
+
 }
 
 .flex img {
-transform: translate(-300px);
+margin-right: -10px;
+
 }
 
 .flex p {
-transform: translate(-300px);
+margin-right: -20px;
 
 }
+
+
+
 } 
