--- a/style.css
+++ b/style.css
@@ -1,83 +1,106 @@
-*,*::after, *::before {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 
 }
 
-html {
-overflow-x: hidden;
+body{
+   height: 100vh;
+   background: url(./img/ilusha_perfect.png);
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: 640px;
 
 }
 
-body {
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-min-height: 100vh;
+main {
+    
+    display: flex;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 640px;
 
 }
 
-body a {
-text-decoration: none;
+.memory-game {
+    width: 640px;
+    height: 640px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    perspective: 1000px;
 
 }
 
-.container {
-max-width: 1920px;
-margin: 0 auto
-        
+.memory-card {
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    margin: 5px;
+    position: relative;
+    transform-style: preserve-3d;
+    box-shadow: 1px 1px  rgba(0, 0, 0, .3);
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+
 }
 
-.container img {
-    width: 150px;
+memory-card:active {
+    transform: scale(0.97);
+    transition: transform .2s;
+
+}
+  
+.front-face {
+    width: 100%;
     height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: #1C7CCC;
+    backface-visibility: hidden;
 
 }
 
-.container p {
-    color: burlywood;
+.back-face {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+
+}
+
+.memory-card.flip {
+    transform: rotateY(180deg);
+
+}
+
+.wel h1{
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    font-size: 50px;  
+    color: black;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;  
+
+}
+
+.couter h2{
+    color: black;
+    font-family: 'Verdana';
     
 }
 
-.grid0 {
-    text-align: center;
+.button {
+    width: 100px;
+    height: 100px;
+    color: black;
 
 }
 
-.section_container img{
-    max-width: 1920px;
-    margin: 0 auto;
-
-
-    width: 150px;
-    height: 100%;
-    
-}
-
-.section_container p {
-    color: burlywood;
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 10px;
+label {
+    font-size: 30px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 }
 
-.section_container {
-    display: grid;
-    grid-template-columns: repeat(3, 5fr);
-    grid-gap: 20px 20px;
-
-    padding-left: 200px;
-    padding-right: 200px;
-   
-
-}
-
-.grid {
-    border: 1px solid white;
-
-}
